--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       type="image/svg+xml"
       href="https://img.icons8.com/?size=512&id=85470&format=png"
     />
+    <link rel="stylesheet" href="./src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Users PJ</title>
   </head>
